welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:4: error: type mismatch;
 found   : Int(19)
 required: Boolean
    if (13<a<19 || 13<b<19){
             ^hasTeen:4: error: type mismatch;
 found   : Int(19)
 required: Boolean
    if (13<a<19 || 13<b<19){
                        ^hasTeen:6: error: type mismatch;
 found   : Int(19)
 required: Boolean
  	}else if(13<c<19){
                      ^